added rose page and link

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <section class="Websites">
       <h2>Rose Day</h2>
-    <a href="https://atharva262005.github.io/roseday/" class="btn-secondary">Live Demo</a>
-    <a href="https://atharva262005.github.io/roseday/" class="btn-secondary">github link</a>
+    <a href="https://atharva262005.github.io/RoseDay-Website/" class="btn-secondary">Live Demo</a>
+    <a href="https://github.com/ATHARVA262005/RoseDay-Website" class="btn-secondary">github</a>
     </section>
   </main>
 
