--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </main>
 
   <footer>
-    <p class="copyright">&copy; 2024 CodeGeeks</p>
+    <p class="copyright">&copy; 2024 Atharva Ralegankar</p>
   </footer>
 </body>
 </html>
