--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
     </section>
 
     <section class="Websites">
+      <div>
       <h2>Rose Day</h2>
     <a href="https://atharva262005.github.io/RoseDay-Website/" class="btn-secondary">Live Demo</a>
     <a href="https://github.com/ATHARVA262005/RoseDay-Website" class="btn-secondary">github</a>
+      </div>
+      <div>
+      <h2>ProPose Day</h2>
+    <a href="https://atharva262005.github.io/ProposeDay-Website/" class="btn-secondary">Live Demo</a>
+    <a href="https://github.com/ATHARVA262005/ProposeDay-Website/tree/main" class="btn-secondary">github</a>
+      </div>
     </section>
   </main>
 
