--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
       <div>
       <h2>Rose Day</h2>
     <a href="https://atharva262005.github.io/RoseDay-Website/" class="btn-secondary">Live Demo</a>
+        <br>
     <a href="https://github.com/ATHARVA262005/RoseDay-Website" class="btn-secondary">github</a>
       </div>
+      
       <div>
       <h2>ProPose Day</h2>
     <a href="https://atharva262005.github.io/ProposeDay-Website/" class="btn-secondary">Live Demo</a>
+        <br>
     <a href="https://github.com/ATHARVA262005/ProposeDay-Website/tree/main" class="btn-secondary">github</a>
+      </div>
+
+      <div>
+      <h2>Choclate Day</h2>
+    <a href="https://atharva262005.github.io/Choclate-day/" class="btn-secondary">Live Demo</a>
+        <br>
+    <a href="https://github.com/ATHARVA262005/Choclate-day" class="btn-secondary">github</a>
       </div>
     </section>
   </main>
